# Mankind

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  style.sh
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
res/gui/: hud.xml
res/shaders/: #default.vert#  #sky.frag#  .#default.vert  .#sky.frag  billboard.frag  billboard.vert  cube.frag  cube.vert  default.frag  default.vert  highlight.frag  sky.frag  sky.vert  text.frag  text.vert
res/tex/: VGA.gpl  stone.xcf  tiles.xcf
src/: BaseGUIElement.cpp  BaseGUIElement.hpp  Billboard.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ChunkMesh.cpp  ChunkMesh.hpp  Controller.cpp  Controller.hpp  CrossMesh.cpp  CrossMesh.hpp  Cube.hpp  DelayedTerrainModification.hpp  DirectionalLight.cpp  DirectionalLight.hpp  ECS.hpp  Font.cpp  Font.hpp  FormatString.cpp  FormatString.hpp  GUI.cpp  GUI.hpp  GUIConstructor.cpp  GUIConstructor.hpp  GUIDrawer.cpp  GUIDrawer.hpp  GUIElement.cpp  GUIElement.hpp  GUIInputMode.cpp  GUIInputMode.hpp  GUILabel.cpp  GUILabel.hpp  Game.cpp  Game.hpp  GraphX.hpp  GraphXManager.cpp  GraphXManager.hpp  GraphicsComponent.hpp  (+56 more)
src/.deps/: main.Po
